--- a/css/prototype.css
+++ b/css/prototype.css
@@ -639,7 +639,11 @@ input[type="checkbox"]{display:none;}
     display: none; 
 }
 
-#comment img{    width: 100%;}
+#comment img {
+    width: 100%;
+    position: relative;
+    top: 11px;
+}
 
 .subscribe {
 
@@ -764,15 +768,14 @@ input[type="checkbox"]{display:none;}
 }
 
 
-
 #backtotop {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-  height: 40px;
-  text-align: center;
-  background-color: rgba(255,255,255,0.5);
-  padding-top: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    background-color: rgba(255,255,255,1);
+    padding-top: 10px;
 }
 
 #footer {
