--- a/css/prototype.css
+++ b/css/prototype.css
@@ -62,15 +62,60 @@ body{
 .pagetabs li{
 	width: 33%;
   text-align: center;
+  color:#3B8080;
 }
+
+
 .intTab li{
   width: 50%;
 	text-align: center;
-	padding: 19px 0px 5px 0px;
+	padding: 25px 0px 5px 0px;
   background-color: #ccc;
   margin-bottom: 8px;
+ }
+
+ 
+
+
+.intTab li.selected {
+    border-bottom: 3px solid transparent;
+    background-color: transparent;
+           
+}
+
+#public-explore {
+  box-shadow: -2px -2px 10px #696969 inset;
+}
+
+#personal-explore {
+  box-shadow: 2px 2px 10px #696969 inset;
 
 }
+
+ #personal-explore.selected  {
+      box-shadow:none; 
+}
+
+ #public-explore.selected {
+   box-shadow:none;
+
+  }
+
+
+
+.intTab a {
+    font-family: 'Open Sans', sans-serif;;
+    font-size: 1em;
+    text-decoration: none;
+    color: #696969;
+    
+}
+  li.selected a {
+   color: #008080;
+   font-weight: bold;
+ }
+
+
 .updateTabs li{
   width: 33%;
   font-size: 16px;
@@ -108,11 +153,9 @@ body{
 }
 
 #newsUpdate {
-  margin-bottom: 40px;
+  margin: 10px 15px;
   position:relative;
   top: 400px;
-  margin-right:10px;
-
 }
 
 
@@ -152,21 +195,11 @@ body{
 
 li.selected{
 	border-bottom: 3px solid #008080;
-  font-weight: bold;
-  
+ 
 }
 
-.intTab li.selected {
-    border-bottom: 3px solid transparent;
-    background-color: transparent;
-}
 
-.intTab a {
-	  font-family: 'Open Sans', sans-serif;;
-    font-size: 1em;
-    text-decoration: none;
-    color: #008080;
-}
+
 
 .updateTabs li.selected{
   border-bottom: none;
@@ -219,17 +252,7 @@ li.selected{
   width:100%; 
 }
 
-#headingExplore {
-    padding: 7px 8px 4px 155px;
-    display: flex;
-    margin-top: 14px;
-    position: relative;
-    text-align: center;
-    background-color: rgba(0, 128, 128, 0.29);
-    font-family: 'open sans';
-    color: #FFFFFF;
-    font-weight: lighter;
-}
+
 
 .top {
   position: fixed;
@@ -320,18 +343,95 @@ li.selected{
 
 }
 
+#heading-div-article {
+   position:relative;
+   top:-10px;
+   margin:12px 0px 0px 0px;  
+   padding: 0px 100px 0px 15px;
+
+}
+
+#heading-div-discussion {
+   position:relative;
+   top:15px;
+   margin:10px 0px 15px 0px;  
+   padding: 0px 15px 10px 15px;
+
+}
+
+#heading-div-discussion p {
+  text-align: left;
+  position:relative;
+  top: 3px;
+  margin: 8px 0px 13px 0px;
+  padding-right: 20px;
+  font-size: 18px;
+  color: black;
+  font-family: 'LiberationSerif-Regular-webfont';
+  line-height: 15px;
+
+} 
+
+#heading-div-explore {
+   position:relative;
+   top:13px;
+   padding:10px 15px 1px 15px;
+   background-color: #CCCCCC
+}
+
+
+
+.title-header{
+ position:relative;
+ margin:0px 15px;
+
+}
+
 #headingArticle {
-    padding: 2px 140px 2px 135px;
+    /*padding: 2px 140px 2px 135px;*/
+    /*position: relative;*/
+    text-align: left;    
+    /*background-color: rgba(0, 128, 128, 0.29);*/
+    font-family: 'open sans';
+    font-weight:lighter;
+    font-size: 20px;
+    color: #5a5a5a;
+}
+
+#headingExplore {
+   /* padding: 7px 8px 4px 155px;
+    display: flex;
+    margin-top: 14px;
+    position: relative;
+    text-align: center;
+    background-color: rgba(0, 128, 128, 0.29);*/
+    font-family: 'open sans';
+    color: #5a5a5a;
+    font-weight: lighter;
+    text-align:left;
+    font-size:20px;
+}
+
+#headingDiscussion {
+    /*padding: 10px 8px 5px 140px;
+    display: flex;
+    margin-top: 10px;
     position: relative;
     text-align: center;
     background-color: rgba(0, 128, 128, 0.29);
     font-family: 'open sans';
+    color: #FFFFFF;*
+    text-align: left;    
+    /*background-color: rgba(0, 128, 128, 0.29);*/
+    font-family: 'open sans';
     color: #FFFFFF;
+    font-weight:lighter;
+    font-size: 20px;
+    color: #5a5a5a;
+
 }
-
-
 #article {
-	padding: 20px;
+	padding: 20px 0px;
   position:relative;
   min-height:1200px;
 }
@@ -595,15 +695,7 @@ input[type="checkbox"]{display:none;}
 
 /* end share function */
 
-#headingDiscussion {
-    padding: 10px 8px 5px 140px;
-    display: flex;
-    margin-top: 10px;
-    position: relative;
-    text-align: center;
-    background-color: rgba(0, 128, 128, 0.29);
-    font-family: 'open sans';
-    color: #FFFFFF;
+
 }
 
 #comment {
@@ -625,8 +717,8 @@ input[type="checkbox"]{display:none;}
 }
 
 .poll {
-  padding:0px 0px 90px 0px;
-  margin-bottom: 10px;
+  padding:0px 0px 50px 0px;
+  margin: 10px 15px;
   width:100%;
   font-family: 'Open Sans', sans-serif;
   /*background-color: white;*/
@@ -656,7 +748,6 @@ input[type="checkbox"]{display:none;}
  font-family: 'Open Sans', sans-serif;
  font-size: 19px;
  background-color: #008080;
- float:right;
  text-align: center;
  color:white;
  border-radius: 20px;
@@ -664,7 +755,7 @@ input[type="checkbox"]{display:none;}
  vertical-align: top;
  padding:10px;
  position:relative; 
- margin: 10px;
+ margin: 10px 20px;
 }
 
 .pollOptions {
@@ -840,6 +931,9 @@ stroke-width: 4px;
    border:0.5px solid;
    color: #737373;
    background-color: #737373;
+   width:50%;
+   text-align:left;
+   margin-left: 0px;
  
  }
 
