fixed the bug in the display of the article page

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -59,6 +59,7 @@ body{
 	display: -webkit-flex;
 	display: flex;
 }
+
 .pagetabs li{
 	width: 33%;
   text-align: center;
@@ -75,8 +76,6 @@ body{
  }
 
  
-
-
 .intTab li.selected {
     border-bottom: 3px solid transparent;
     background-color: transparent;
@@ -89,7 +88,6 @@ body{
 
 #personal-explore {
   box-shadow: 2px 2px 10px #696969 inset;
-
 }
 
  #personal-explore.selected  {
@@ -101,8 +99,6 @@ body{
 
   }
 
-
-
 .intTab a {
     font-family: 'Open Sans', sans-serif;;
     font-size: 1em;
@@ -110,6 +106,7 @@ body{
     color: #696969;
     
 }
+  
   li.selected a {
    color: #008080;
    font-weight: bold;
@@ -123,19 +120,19 @@ body{
   padding-top: 12px;
   padding-bottom: 12px;
   background-color: #CCCCCC;
-  
+  }
 
-  
-}
 .updateTabs li.selected{
   background-color: #fff;
   color: #3B8080;
  
    /*box-shadow: inset 2px 2px 5px rgba(63,63,63, 0.8);*/
-}
+ }
+
 .tabIntContent{
 	display: none;
 }
+
 .tabIntContent:first-of-type{
 	display: block;
 }
@@ -148,9 +145,8 @@ body{
   margin: 6px 4px;
   display: inline-block;
   font-size: 14px;
-
-  
 }
+
 
 #newsUpdate {
   margin: 10px 15px;
@@ -190,8 +186,6 @@ body{
     padding-left: 270px;
 }
 
-
-
 .signUpdate {
     /* position: relative; */
     /* float: right; */
@@ -214,20 +208,18 @@ li.selected{
  
 }
 
-
-
-
 .updateTabs li.selected{
   border-bottom: none;
   padding-left: 2px;
   padding-right: 1px;
 }
+
 .updateTabs li a{
   color: #000;
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
-  
-}
+  }
+
 .updateTabs li.selected a{
   color: #3B8080;
   /*text-decoration: underline;
@@ -247,8 +239,6 @@ li.selected{
 #service{
   float: right;
 }
-
-
 
 /* position and z-index make the navigation and the header to a fixed one (via class .top) */
 
@@ -332,8 +322,6 @@ li.selected{
   float: right;
 }
 
-
-
 .pagetabs li a{width: 100%; height: auto; display: inline-block;  }
 
   /* This will 'remove' any rights from the <object> of responding to the mouse/pointer.
@@ -363,7 +351,6 @@ li.selected{
 .content {
 	background-color: #ebeced;
   padding-top: 90px;
-
 }
 
 #heading-div-article {
@@ -371,7 +358,6 @@ li.selected{
    top:-10px;
    margin:12px 0px 0px 0px;  
    padding: 0px 100px 0px 15px;
-
 }
 
 #heading-div-discussion {
@@ -379,8 +365,8 @@ li.selected{
    top:15px;
    margin:10px 0px 15px 0px;  
    padding: 0px 15px 10px 15px;
-
 }
+
 
 #heading-div-discussion p {
   text-align: left;
@@ -392,7 +378,6 @@ li.selected{
   color: black;
   font-family: 'LiberationSerif-Regular-webfont';
   line-height: 15px;
-
 } 
 
 #heading-div-explore {
@@ -401,7 +386,6 @@ li.selected{
    padding:10px 15px 1px 15px;
    background-color: #CCCCCC
 }
-
 
 
 .title-header{
@@ -422,12 +406,6 @@ li.selected{
 }
 
 #headingExplore {
-   /* padding: 7px 8px 4px 155px;
-    display: flex;
-    margin-top: 14px;
-    position: relative;
-    text-align: center;
-    background-color: rgba(0, 128, 128, 0.29);*/
     font-family: 'open sans';
     color: #5a5a5a;
     font-weight: lighter;
@@ -436,23 +414,13 @@ li.selected{
 }
 
 #headingDiscussion {
-    /*padding: 10px 8px 5px 140px;
-    display: flex;
-    margin-top: 10px;
-    position: relative;
-    text-align: center;
-    background-color: rgba(0, 128, 128, 0.29);
-    font-family: 'open sans';
-    color: #FFFFFF;*
-    text-align: left;    
-    /*background-color: rgba(0, 128, 128, 0.29);*/
     font-family: 'open sans';
     color: #FFFFFF;
     font-weight:lighter;
     font-size: 20px;
-    color: #5a5a5a;
-
+   color: #5a5a5a;
 }
+
 #article {
 	padding: 20px 0px;
   position:relative;
@@ -497,7 +465,9 @@ li.selected{
 		/* the top values will vary accod=rding to the page and will be set via JS */
 }
 
-.pagenr, .imgnr {text-align: center; font-size: .8em;}
+.pagenr, .imgnr {
+  text-align: center; font-size: .8em;}
+
 .imgnr{
   position: relative;
   top: -420px;
@@ -671,6 +641,7 @@ input[type="checkbox"]{display:none;}
   transition:.5s;
   opacity:0;
 }
+
 .social ul {
   margin-left :10%;
   margin-bottom: 23%;
@@ -719,7 +690,7 @@ input[type="checkbox"]{display:none;}
 /* end share function */
 
 
-}
+
 
 #comment {
 	  width: 100%;
@@ -743,7 +714,7 @@ input[type="checkbox"]{display:none;}
   float: center;
 }
 
-.poll {
+#poll {
   padding:0px 0px 50px 0px;
   margin: 10px 15px;
   width:100%;
@@ -752,6 +723,7 @@ input[type="checkbox"]{display:none;}
   position: relative;
   top:400px;
   }
+
 
 .poll span {
   font-size: 19px;  
@@ -843,19 +815,14 @@ input[type="checkbox"]{display:none;}
 }
 
 
-
-
 #left {
   position: relative;
   float:left;
-
 }
 
 #right {
   position: relative;
   float:right;
-
-
 }
 
 
@@ -908,9 +875,8 @@ input[type="checkbox"]{display:none;}
 .selected .tab-icon  {   /* the svg selected is turquiose */
   stroke: #008080;  
   stroke-width: 2.5px;
-  
-  
-}
+ }
+
 .tab-icon {   /* default svg color when not selected */
   stroke: #696969;
   stroke-width: 1.5px;
