--- a/css/prototype.css
+++ b/css/prototype.css
@@ -724,11 +724,10 @@ input[type="checkbox"]{display:none;}
   top:400px;
   }
 
+#belowarticle {
+ position:relative;
 
-.poll span {
-  font-size: 19px;  
-  position:relative; 
-  }
+}
 
   .subheader {
   font-size: 24px;
@@ -739,9 +738,16 @@ input[type="checkbox"]{display:none;}
   font-weight: lighter;
   margin: 5px 0px;
   padding:0px;
-
   }
 
+#question {
+  padding:0px 30px 0px 0px;
+  text-align:left;
+  margin:10px 0px;
+  position:relative;
+  float:left;
+  line-height: 18px;
+}
 
 #submit-button{
  font-family: 'Open Sans', sans-serif;
