--- a/css/prototype.css
+++ b/css/prototype.css
@@ -83,11 +83,11 @@ body{
 }
 
 #public-explore {
-  box-shadow: -2px -2px 10px #696969 inset;
+  box-shadow: -2px -2px 10px #a8a8a8 inset;
 }
 
 #personal-explore {
-  box-shadow: 2px 2px 10px #696969 inset;
+  box-shadow: 2px 2px 10px #a8a8a8 inset;
 }
 
  #personal-explore.selected  {
@@ -180,7 +180,7 @@ body{
 #newsUpdate {
   margin: 10px 15px;
   position:relative;
-  top: 450px;
+  top: 400px;
 }
 
 
@@ -461,7 +461,7 @@ li.selected{
 #article {
 	padding: 20px 0px;
   position:relative;
-  min-height:1200px;
+  min-height:1400px;
 }
 
 #title {
@@ -550,6 +550,7 @@ li.selected{
 .relatedArticles {
     position: relative;
     width: 100%;
+    top:400px;
 }
 
 #TextCard1 {
@@ -768,8 +769,7 @@ input[type="checkbox"]{display:none;}
 }
 
 #poll {
-  padding:0px 0px 50px 0px;
-  margin: 10px 15px;
+  margin: 10px 15px 10px 15px;
   width:100%;
   font-family: 'Open Sans', sans-serif;
   /*background-color: white;*/
@@ -779,6 +779,20 @@ input[type="checkbox"]{display:none;}
 
 #belowarticle {
  position:relative;
+
+}
+
+#related-lines {
+
+  position: relative;
+  float:left;
+  top: 400px;
+  margin-left: 15px;
+   border:0.5px solid;
+   color: #737373;
+   background-color: #737373;
+   width:50%;
+ 
 
 }
 
@@ -899,7 +913,7 @@ input[type="checkbox"]{display:none;}
 }
 
 #footer {
-	margin-top: 250px;
+	margin-top: 70px;
 	text-align: left;
   position:relative;
   background-color: #434343;
