--- a/css/prototype.css
+++ b/css/prototype.css
@@ -83,11 +83,11 @@ body{
 }
 
 #public-explore {
-  box-shadow: -2px -2px 10px #696969 inset;
+  box-shadow: -2px -2px 10px #a8a8a8 inset;
 }
 
 #personal-explore {
-  box-shadow: 2px 2px 10px #696969 inset;
+  box-shadow: 2px 2px 10px #a8a8a8 inset;
 }
 
  #personal-explore.selected  {
