--- a/css/prototype.css
+++ b/css/prototype.css
@@ -584,12 +584,25 @@ li.selected{
 	text-align: center;
 }
 
+/* fixed tab stuff */
+.tabFix{
+  position: fixed;
+  top: 104px;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(235, 236, 237);
+}
+
+.tabFix li{
+  padding-top: 15px;
+}
+/* end fixed tab stuff */
+
 /* explore public */
-#tab1 img{width: 100%;}
+#tab1 img{ width: 100%;}
 
 /* explore personal*/
-#tab2 img {
-    width: 100%;}
+#tab2 img { width: 100%;}
 
 #logIn {
     width: 100%;
