--- a/css/prototype.css
+++ b/css/prototype.css
@@ -262,7 +262,7 @@ li.selected{
 	display: inline;
 	font-size: 24px;
   text-align: left;
-  font-family: 'Julius Sans One';
+  font-family: 'Lobster';
   vertical-align: top;
 }
 
