--- a/css/prototype.css
+++ b/css/prototype.css
@@ -146,7 +146,6 @@ body{
     text-align: left;
     margin-left: 20px;
     position: relative;
-    margin-bottom: 20px;
 }
 
 .subheaderExDutch{
@@ -155,16 +154,18 @@ body{
     font-family: 'open sans';
     font-size: x-large;
     font-weight: lighter;
-    display: inline-flex;
-}
+    /*display: inline-flex;*/
+    text-align: -webkit-center;
+  }
 
-.subheaderExWorld{
-   margin-left: 20px;
+.subheaderExWorld {
+    margin-left: 20px;
     padding-bottom: 9px;
     font-family: 'open sans';
     font-size: x-large;
     font-weight: lighter;
-    display: inline-flex;
+    /* display: inline-flex; */
+    text-align: -webkit-center;
 }
 
 /* update tabs */
