toggle changes explore public and personal

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -145,7 +145,6 @@ body{
     width: 90%;
     text-align: left;
     margin-left: 20px;
-    position: relative;
 }
 
 .subheaderExDutch{
@@ -154,8 +153,7 @@ body{
     font-family: 'open sans';
     font-size: x-large;
     font-weight: lighter;
-    /*display: inline-flex;*/
-    text-align: -webkit-center;
+    text-align: left;
   }
 
 .subheaderExWorld {
@@ -164,8 +162,7 @@ body{
     font-family: 'open sans';
     font-size: x-large;
     font-weight: lighter;
-    /* display: inline-flex; */
-    text-align: -webkit-center;
+    text-align: left;
 }
 
 /* update tabs */
@@ -829,7 +826,7 @@ input[type="checkbox"]{display:none;}
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
   margin: 5px 0px;
-  padding:0px;
+  padding-top: 10px;
   }
 
 
