--- a/css/prototype.css
+++ b/css/prototype.css
@@ -795,11 +795,6 @@ input[type="checkbox"]{display:none;}
     top: 11px;
 }
 
-.subscribe {
-
-  width:70%;
-  float: center;
-}
 
 #poll {
   margin: 10px 15px 10px 15px;
@@ -841,7 +836,7 @@ input[type="checkbox"]{display:none;}
 #question {
   padding:0px 30px 0px 0px;
   text-align:left;
-  margin:10px 0px;
+  margin: 10px 10px 10px 0px;
   position:relative;
   float:left;
   line-height: 18px;
@@ -942,7 +937,7 @@ input[type="checkbox"]{display:none;}
 }
 
 #footer {
-	margin-top: 90px;
+	margin-top: 120px;
 	text-align: left;
   position:relative;
   background-color: #434343;
@@ -951,12 +946,30 @@ input[type="checkbox"]{display:none;}
   font-weight:lighter;
   padding:5px;
   display:inline-block;
+  width: 100%;
 
 }
 
 #footer li {
   margin: 10px;
   padding:5px;
+}
+
+.subscribe {
+
+ font-family: 'Open Sans', sans-serif;
+ font-size: 19px;
+ background-color: #008080;
+ text-align: center;
+ color:white;
+ border-radius: 20px;
+ border:none;
+ vertical-align: top;
+ padding:10px;
+ position:relative;
+ margin: 10px 0px;
+ padding:16px 10px 2px 10px;
+
 }
 
 
@@ -1094,4 +1107,15 @@ stroke-width: 4px;
 #arrowWhen{
   position:relative;
   top:35px;
+}
+
+#subscribe-arrow{
+    stroke-width: 1px;
+    stroke:white;
+    fill:#008080;
+    position:relative;
+    float:right;
+    padding-left: 10px;
+    padding-top: 3px;
+
 }
