--- a/css/prototype.css
+++ b/css/prototype.css
@@ -740,7 +740,7 @@ input[type="checkbox"]{display:none;}
 
 .social ul {
   margin-left :10%;
-  margin-bottom: 23%;
+  margin-bottom: 27%;
   color:#fff;
   height:36px;
   width:180px;
@@ -987,7 +987,12 @@ input[type="checkbox"]{display:none;}
   padding:5px;
   display:inline-block;
   width: 100%;
+}
 
+#love {
+
+  text-align: center;
+  font-size: 14px;
 }
 
 #footer li {
@@ -1011,9 +1016,6 @@ input[type="checkbox"]{display:none;}
  padding:16px 10px 2px 10px;
 
 }
-
-
-
 
 
   /*.explore-graphic{
@@ -1097,8 +1099,6 @@ stroke-width: 4px;
   position: relative;
   top: -18px;
  }
-
-
 
 
 #share {
