--- a/css/prototype.css
+++ b/css/prototype.css
@@ -431,8 +431,8 @@ li.selected{
 
 #heading-div-discussion {
    position:relative;
-   top:15px;
-   margin:10px 0px 15px 0px;
+   top:115px;
+   margin:0px 0px 15px 0px;
    padding: 0px 15px 0px 15px;
 }
 
@@ -465,6 +465,17 @@ li.selected{
    top:13px;
    padding:10px 15px 1px 15px;
    background-color: #d9d9d9;
+}
+
+#hedingTrendingVoices {
+   position:relative;
+   font-family: 'open sans';
+   color: #5a5a5a;
+  font-weight: lighter;
+  text-align:left;
+  font-size:18px;
+  margin:10px 0px;
+  
 }
 
 
@@ -1220,3 +1231,41 @@ stroke-width: 4px;
 
 /* jquery mobile stuff */
 .ui-loader.ui-corner-all.ui-body-a.ui-loader-default{display: none;}
+
+/*Trending Voices animation*/
+
+#trending-voices-div {
+   width:1400px;
+   height: 121px;
+  animation-name:slider;
+  animation-duration:10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count:infinite;
+  }
+
+#container-div-trending-voices{
+   width: 325px;
+   height: 121px;
+   border: none;
+   background: #f1f1f1;
+   overflow: hidden;   
+   margin: 10px 0px;
+}
+
+#trending-voices-div img {
+  width: 325px; 
+  height: 121px;
+  }
+
+@keyframes slider {
+  0% { transform: translateX(0px); }
+  20% { transform: translateX(0px); }
+  25% { transform: translateX(-329px); }
+  45% { transform: translateX(-329px); }
+  50% { transform: translateX(-655px); }
+  70% { transform: translateX(-655px); }
+  75% { transform: translateX(-985px); }
+  95% { transform: translateX(-985px); }
+  100% { transform: translateX(0px);  }
+}
+
