--- a/css/prototype.css
+++ b/css/prototype.css
@@ -741,6 +741,7 @@ li.selected{
 /* discussion */
 #discussion img {
     width: 100%;
+    margin-bottom: 70px;
 }
 
 /* bottom */
@@ -1038,7 +1039,7 @@ input[type="checkbox"]{display:none;}
 
 
 #footer {
-	margin-top: 30px;
+	margin-top: 90px;
 	text-align: left;
   position:relative;
   background-color: #434343;
@@ -1249,7 +1250,7 @@ stroke-width: 4px;
 #container-div-trending-voices{
    width: 325px;
    height: 121px;
-   border: none;
+   border: none;margin-bottom: 70px;
    background: #f1f1f1;
    overflow: hidden;   
    margin: 10px 0px;
