--- a/css/prototype.css
+++ b/css/prototype.css
@@ -536,7 +536,7 @@ li.selected{
 	font-size: 1.2em;
   /*font-family: Open Sans;*/
 	padding-left: .5em;
-	border-left: 3px solid #ddd;
+	border-left: 2px solid #848484;
   margin-top: 1em !important;
 }
 
