--- a/css/prototype.css
+++ b/css/prototype.css
@@ -77,6 +77,19 @@ body{
     width: 80%;
 }
 
+
+.fa-times-circle:before {
+    content: "\f057";
+    padding-left: 145px;
+}
+
+.linkYin {
+  font-weight: bolder;
+}
+
+.linkPEx {
+  font-weight: bolder;
+}
 .pagetabs, .intTab, .updateTabs {
 	list-style: none;
 	display: -webkit-flex;
