--- a/css/prototype.css
+++ b/css/prototype.css
@@ -70,6 +70,13 @@ body{
     width: 80%;
 }
 
+.numPages, .pageNr {
+    text-align: center;
+    color: #928e8e;
+    position: relative;
+    padding-top: 20px;
+    font-size: medium;
+}
 
 .fa-times-circle:before {
     content: "\f057";
@@ -586,8 +593,8 @@ li.selected{
 
 #MessagePage{
   /*height: 300px;*/ /* as defined in JS */
-  background-color: rgb(0, 128, 128);
-  color: #fff;
+    background-color: rgb(192, 199, 199);
+    color: #fff;
 }
 
 .pagenr, .imgnr {
