--- a/css/prototype.css
+++ b/css/prototype.css
@@ -747,9 +747,11 @@ li.selected{
 }*/
 
 /* discussion */
-#discussion img {
+#comments-img {
     width: 100%;
-    margin: 20px 0px 70px 0px;
+    position: relative;
+    top: 30px;
+   
 }
 
 /* bottom */
@@ -1291,6 +1293,8 @@ stroke-width: 4px;
    border: none;margin-bottom: 20px;
    background: #f1f1f1;
    overflow: hidden;   
+   position: relative;
+   top: -20px;
    
 }
 
@@ -1311,3 +1315,43 @@ stroke-width: 4px;
   100% { transform: translateX(0px);  }
 }
 
+#trending-voice-button-right {
+    color: white;
+    float: right;
+    padding: 3px 8px;
+    text-decoration: none;
+    background: #008080;
+    border: none;
+    font-size: 20px;
+    position:relative;
+    top:-85px;
+    z-index:999;
+    margin:10px;
+    opacity:0.8;
+    
+}
+
+#trending-voice-button-left {
+    color: white;
+    float: left;
+    padding: 3px 8px;
+    text-decoration: none;
+    background: #008080;
+    border: none;
+    font-size: 20px;
+    position:relative;
+    top:102px;
+    z-index:999;
+    margin:5px;
+    opacity:0.8;
+    
+}
+
+
+
+
+#Trending-Voice-Container{
+ width:100%;
+ margin-bottom:10px;
+
+}
