--- a/css/prototype.css
+++ b/css/prototype.css
@@ -563,6 +563,7 @@ li.selected{
 	padding-left: .5em;
 	border-left: 2px solid #848484;
   margin-top: 1em !important;
+  line-height: 20px;
 }
 
 #paginated-content{
